// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time does not show 0 delay number 1`] = `
<div
  class="Time-wrap Time-multiLineWrap"
>
  <span
    class=""
    data-testid="time"
  >
    13:55
  </span>
</div>
`;

exports[`Time no time 1`] = `null`;

exports[`Time showOriginalTime = false 5 Minutes early 1`] = `
<div
  class="Time-wrap Time-early Time-multiLineWrap"
>
  <span
    class=""
    data-testid="time"
  >
    13:55
  </span>
  <span
    class="Time-early"
    data-testid="delay"
  >
    -5
  </span>
</div>
`;

exports[`Time showOriginalTime = false 10 Minutes delay 1`] = `
<div
  class="Time-wrap Time-delayed Time-multiLineWrap"
>
  <span
    class=""
    data-testid="time"
  >
    13:55
  </span>
  <span
    class="Time-delayed"
    data-testid="delay"
  >
    +10
  </span>
</div>
`;

exports[`Time shows 0 delay number 1`] = `
<div
  class="Time-wrap Time-early Time-multiLineWrap"
>
  <span
    class=""
    data-testid="time"
  >
    13:55
  </span>
  <span
    class="Time-early"
    data-testid="delay"
  >
    +0
  </span>
</div>
`;
